deploy/k8s/jitsi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jitsi-web
  namespace: fistream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jitsi-web
  template:
    metadata:
      labels:
        app: jitsi-web
    spec:
      containers:
        - name: web
          image: jitsi/web:stable-10888
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prosody
  namespace: fistream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prosody
  template:
    metadata:
      labels:
        app: prosody
    spec:
      containers:
        - name: prosody
          image: jitsi/prosody:stable-10888
          ports:
            - containerPort: 5222
            - containerPort: 5280
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jicofo
  namespace: fistream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jicofo
  template:
    metadata:
      labels:
        app: jicofo
    spec:
      containers:
        - name: jicofo
          image: jitsi/jicofo:stable-10888
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvb
  namespace: fistream
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jvb
  template:
    metadata:
      labels:
        app: jvb
    spec:
      containers:
        - name: jvb
          image: jitsi/jvb:stable-10888
          ports:
            - containerPort: 10000
              protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: jitsi-web
  namespace: fistream
spec:
  selector:
    app: jitsi-web
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: prosody
  namespace: fistream
spec:
  selector:
    app: prosody
  ports:
    - name: c2s
      port: 5222
      targetPort: 5222
    - name: bosh
      port: 5280
      targetPort: 5280
---
apiVersion: v1
kind: Service
metadata:
  name: jvb-udp
  namespace: fistream
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: jvb
  ports:
    - name: media
      protocol: UDP
      port: 10000
      targetPort: 10000
